--- a/package.json
+++ b/package.json
@@ -4,5 +4,22 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "mongodb": "^6.16.0"
-  }
+  },
+  "name": "finalproject",
+  "version": "1.0.0",
+  "description": "",
+  "main": "ageGuesser.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tylerxbrady/finalProject.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/tylerxbrady/finalProject/issues"
+  },
+  "homepage": "https://github.com/tylerxbrady/finalProject#readme"
 }
