Fixed ports so it will work with render instead of locally

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "name": "finalproject",
   "version": "1.0.0",
-  "description": "",
+  "description": "**Submitted by:** FIRST LAST (directory id: INSERT)   **Group Members:** Tyler Brady (tbrady1), Lee Forberg (lforberg)   **App Description:** This app guesses a person's age based on their first name using the Agify API.   It stores and retrieves previous guesses using MongoDB to avoid duplicate API calls. **YouTube Video Link:** [https://www.youtube.com/watch?v=DEMO_VIDEO_ID_HERE](https://www.youtube.com/watch?v=DEMO_VIDEO_ID_HERE)   **APIs:** Agify ([https://agify.io](https://agify.io))   **Contact Email:** lforberg@terpmail.umd.edu [insert email]   **Deployed App Link:** [https://deployment-link-here.com](https://deployment-link-here.com)",
   "main": "ageGuesser.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
